third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/dotted-redefine-table-1.stderr
TOML parse error at line 2, column 1
  |
2 | a.b = true
  | ^
dotted key `a` attempted to extend non-table type (boolean)
